# TransformCoordinate

./: .gitignore  .travis.yml  Authors.md  Authors_zh_CN.md  CMakeLists.txt  ChangeLog.md  ChangeLog_zh_CN.md  README.md  TransformCoordinate.cmake.in  TransformCoordinate.cpp  TransformCoordinate.h  TransformCoordinate.pc.in  TransformCoordinateConfig.cmake.in  TransformCoordinateConfigVersion.cmake.in  Version.h.in  appveyor.yml  build_debpackage.sh  deploy.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  tag.sh  vcpkg.json
.github/workflows/: android.yml  build.yml  codeql-analysis.yml  codespell.yml  doxygen.yml  macos.yml  mingw.yml  msvc.yml  ubuntu.yml
App/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
App/Resource/: AppIcon.rc  Resource.qrc
App/Resource/Translations/: TransformCoordinateApp_ar.ts  TransformCoordinateApp_ca.ts  TransformCoordinateApp_cs.ts  TransformCoordinateApp_da.ts  TransformCoordinateApp_de.ts  TransformCoordinateApp_el.ts  TransformCoordinateApp_en.ts  TransformCoordinateApp_en_GB.ts  TransformCoordinateApp_es.ts  TransformCoordinateApp_et.ts  TransformCoordinateApp_fi.ts  TransformCoordinateApp_fr.ts  TransformCoordinateApp_gd.ts  TransformCoordinateApp_gl.ts  TransformCoordinateApp_hu.ts  TransformCoordinateApp_it.ts  TransformCoordinateApp_ja.ts  TransformCoordinateApp_ko.ts  TransformCoordinateApp_nb.ts  TransformCoordinateApp_ne.ts  TransformCoordinateApp_nl.ts  TransformCoordinateApp_nn.ts  TransformCoordinateApp_oc.ts  TransformCoordinateApp_pl.ts  TransformCoordinateApp_pt_BR.ts  TransformCoordinateApp_pt_PT.ts  TransformCoordinateApp_ro.ts  TransformCoordinateApp_ru.ts  TransformCoordinateApp_sk.ts  TransformCoordinateApp_sl.ts  TransformCoordinateApp_sv.ts  TransformCoordinateApp_th.ts  TransformCoordinateApp_tr.ts  TransformCoordinateApp_uk.ts  TransformCoordinateApp_zh.ts  TransformCoordinateApp_zh_CN.ts  TransformCoordinateApp_zh_TW.ts  TransformCoordinateApp_zh_rTW.ts
App/Resource/icons/rabbit-green/: index.theme
App/android/: AndroidManifest.xml
App/android/res/values/: strings.xml
App/android/res/values-zh/: strings.xml
GpxModel/: CMakeLists.txt  GpxModel.pc.in  GpxModelConfig.cmake.in  LibKML.cpp  LibKML.h  gpx_model.cpp  gpx_model.h
Install/: Install.nsi  install.sh
Package/: CMakeCPack.cmake
Package/deb/: postinst.in  postrm.in  prerm.in
Package/share/applications/: io.github.KangLin.TransformCoordinate.desktop.in  org.Rabbit.TransformCoordinate.desktop
Resource/: Android.qrc  Resource.qrc
Resource/translations/: app_cs.ts  app_da.ts  app_de.ts  app_fr.ts  app_hu.ts  app_ja.ts  app_ko.ts  app_pl.ts  app_ru.ts  app_sk.ts  app_sl.ts  app_uk.ts  app_zh_CN.ts  app_zh_TW.ts
Src/: CMakeLists.txt  TransformCoordinate.cpp  TransformCoordinate.h
Src/GpxModel/: CMakeLists.txt  gpx_model.cpp  gpx_model.h  gpxfile.cpp  nmeafile.h  utils.h
Update/: update.xml  update_android.xml
Widgets/DlgAbout/: DlgAbout.cpp  DlgAbout.h  DlgAbout.ui
ci/: build-install-tools-windows.sh  build-install-tools.sh  build.sh  qt-installer.sh
ci/build_script/: build.sh  build_boost.sh  build_change_prefix.sh  build_envsetup_android.sh  build_envsetup_unix.sh  build_envsetup_windows_mingw.sh  build_envsetup_windows_msvc.sh  build_expat.sh  build_libcurl.sh  build_libgpx.sh  build_libkml.sh  build_minizip.sh  build_transformcoordinate.sh  build_uriparser.sh  build_zlib.sh
cmake/: Translations.cmake
debian/: README  README.Debian  README.source  TransformCoordinate.desktop  changelog  control  copyright  postinst  postrm  preinst  rules  watch
etc/: logqt.ini
share/: TransformCoordinate.desktop  TransformCoordinate.sh  org.Rabbit.TransformCoordinate.desktop
test/: test_linux.sh
vcpkg/manifests/: vcpkg.json
